fixed board overlap

--- a/css/style.css
+++ b/css/style.css
@@ -91,15 +91,20 @@ header{
     display:flex;
     flex-direction:column;
     align-items:center;
+    min-width: 500px;
 }
 
 .board{
     margin:50px;
     display: grid;
+    min-width: 500px;
+    min-height: 500px;
 }
 
 .inner-box{
 border:solid 1px black;
+width:50px;
+height:50px;
 }
 
 .inner-box:hover{
